<resources>
    <string name="app_name">ProjetAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_creating_group">Création de groupe</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- String used by creating_group -->
    <string name="group_name_prompt">Nom du groupe</string>
    <string name="group_description_prompt">Description</string>
    <string name="group_devise_name">Devise</string>
    <string name="group_devise_prompt">Veuillez choisir la devise à utiliser</string>
    <string name="validation_button_prompt">Valider</string>
    <string name="guest_name_prompt">Nom</string>
    <string name="add_button_prompt">Ajouter l\'invité</string>
    <string name="del_button_prompt">Retirer l\'invité</string>

    <string name="back_arrow">Retour en arrière</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_transaction_summary">TransactionSummaryActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_detail_transaction">DetailTransactionActivity</string>
    <string name="title_activity_equilibre">EquilibreActivity</string>
</resources>
