<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="56dp" />

                        <EditText
                            android:id="@+id/inputName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/group_name_prompt"
                            android:inputType="textShortMessage"
                            android:importantForAutofill="no"/>

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="30dp" />

                        <EditText
                            android:id="@+id/inputDescription"
                            android:layout_width="match_parent"
                            android:layout_height="53dp"
                            android:hint="@string/group_description_prompt"
                            android:inputType="textShortMessage"
                            android:importantForAutofill="no"/>

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="25dp" />

                        <TextView
                            android:id="@+id/devise"
                            android:layout_width="match_parent"
                            android:layout_height="37dp"
                            android:text="@string/group_devise_name" />

                        <Spinner
                            android:id="@+id/inputDevise"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:entries="@array/devise_entries"
                            android:prompt="@string/group_devise_prompt"
                            android:spinnerMode="dropdown"
                            android:visibility="visible" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="33dp" />

                        <View
                            android:id="@+id/divider"
                            android:layout_width="match_parent"
                            android:layout_height="3dp"
                            android:background="?android:attr/listDivider" />

                        <Space
                            android:layout_width="match_parent"
                            android:layout_height="33dp" />

                        <LinearLayout
                            android:id="@+id/addingLayout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <LinearLayout
                                android:id="@+id/hLayout1"
                                android:layout_width="match_parent"
                                android:layout_height="53dp"
                                android:orientation="horizontal">

                                <EditText
                                    android:id="@+id/personne1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:ems="10"
                                    android:inputType="textPersonName"
                                    android:text="@string/guest_name_prompt"
                                    android:importantForAutofill="no"/>

                                <Button
                                    android:id="@+id/addButton"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:onClick="onClickAddButton"
                                    android:text="@string/add_button_prompt" />
                            </LinearLayout>
                        </LinearLayout>

                        <Button
                            android:id="@+id/button2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:onClick="onClickValidateButton"
                            android:text="@string/validation_button_prompt" />

                    </LinearLayout>
                </ScrollView>

            </LinearLayout>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>